ingress/test-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: argocd-test
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: echo2.argocd-test.vqpn.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-echo-server
                port:
                  number: 80
